Fixed iPhone Safari adding extra padding to input fields.

--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ body {
 #searchbar {
     width: 600px;
     height: 56px;
+    padding: 0;
 }
 
 #searchbar::selection {
